@@ -1,13 +1,0 @@
-class <%= migration_name %> < ActiveRecord::Migration
-  def self.up
-    create_table :<%= table_name %> do |t|
-<% for attribute in attributes -%>
-      t.<%= attribute.type %> :<%= attribute.name %>
-<% end -%>
-    end
-  end
-
-  def self.down
-    drop_table :<%= table_name %>
-  end
-end
